src/test/deca/context/invalid/personalTests/RefVarNonDecla.deca
// Test reference à une variable non déclarée

{
    a = 1;
    print(a);
}